Ignore Desktop Services Store file of MacOS

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Ignore Desktop Services Store file of MacOS
+.DS_Store
